add google fonts

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#536878">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Righteous|Inconsolata" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
